# worldline-projection

./: .gitignore  LICENSE  README.md  demo_worldline.py  pyproject.toml
.github/workflows/: tests.yml
docs/: implementation_contract_v0_3.md
docs/reports/: latest_comparison.md  multiseed_comparison.md
src/worldline/: __init__.py  debug_render.py  generate.py  models.py  negative_controls.py  perturb.py  placement.py  provenance.py  query.py  report_controls.py  substrate.py  validate.py  world.py
tests/: test_battlefields_and_ruins.py  test_debug_render.py  test_forts.py  test_negative_controls.py  test_placement.py  test_report_controls.py  test_roads.py  test_substrate.py  test_worldline_spine.py
